Displaying "No comments to display" message when relevant on Comments panel of Support Ticket Detail page

--- a/Zybach.Web/src/app/pages/support-ticket-detail/support-ticket-detail.component.html
+++ b/Zybach.Web/src/app/pages/support-ticket-detail/support-ticket-detail.component.html
@@ -155,6 +155,9 @@
                             <hr *ngIf="!last" />
                         </div>
                     </div>
+                    <ng-container *ngIf="supportTicket?.Comments?.length == 0">
+                        <em>No comments to display.</em>
+                    </ng-container>
                 </div>
             </div>
         </div>
