sensor detail, water level explorer, well detail all use sensor-chart.component.ts for displaying charts; they follow a similar way of getting their chart spec and data from an endpoint SensorSummaryDto collapsed into SensorSimpleDto ElectricalUsage sensors need to be included in well detail page still

--- a/Zybach.Web/src/app/shared/components/well-water-data-tab/well-water-data-tab.component.html
+++ b/Zybach.Web/src/app/shared/components/well-water-data-tab/well-water-data-tab.component.html
@@ -67,40 +67,9 @@
         <div class="card">
             <div class="card-header">
                 Flow Measurements
-                <a *ngIf="!noTimeSeriesData" class="btn btn-sm btn-zybach float-right" (click)="exportChartData()"><span class="fas fa-download"></span> Download CSV</a>
             </div>
             <div class="card-body">
-                <div class="row" *ngIf="!timeSeries">
-                    <div class="col text-center">
-                        <span class="fas fa-spinner loading-spinner"></span>
-                        <p>Loading...</p>
-                    </div>
-                </div>
-                <div class="row" *ngIf="!noTimeSeriesData">
-                    <div class="input-group col-4">
-                        <span class="font-weight-bold mt-1 mx-3">Date Range:</span>
-                        <!-- input box -->
-                        <input id="dateRangeInput" class="form-control" name="mydate" placeholder="Select a date" 
-                               angular-mydatepicker #dp="angular-mydatepicker" 
-                               [(ngModel)]="dateRange" [options]="myDpOptions"
-                               (dateChanged)="onDateChanged($event)"/>
-                      
-                        <!-- toggle calendar button -->
-                        <div class="input-group-append">
-                          <button type="button" class="btn btn-secondary" (click)="dp.toggleCalendar()">
-                            <i class="fa fa-calendar-o"></i>
-                          </button>
-                        </div>
-                      
-                      </div>
-                      <div class="col-2">
-                          <button type="button" class="btn btn-zybach" (click)="useFullDateRange()">Use Full Date Range</button>
-                      </div>
-
-                </div>
-                <div *ngIf="!noTimeSeriesData" id="{{chartID}}" style="width:100%; min-height: 340px;"></div>
-                <em *ngIf="!noTimeSeriesData">All data are displayed in Central Daylight Time</em>
-                <em *ngIf="noTimeSeriesData">No time series data available for this well.</em>
+                <zybach-sensor-chart [(sensorChartData)]="sensorChartData"></zybach-sensor-chart>
             </div>
         </div>
     </div>
