--- a/Zybach.Web/src/app/pages/sensor-detail/sensor-detail.component.html
+++ b/Zybach.Web/src/app/pages/sensor-detail/sensor-detail.component.html
@@ -7,8 +7,8 @@
     </ol>
 </nav>
 <div class="container" *ngIf="sensor">
-    <ngb-alert *ngIf="sensor.OpenSupportTickets.length > 0" [type]="'warning'" [dismissible]="false">
-        <p *ngFor="let ticket of sensor.OpenSupportTickets">
+    <ngb-alert *ngIf="openSupportTickets.length > 0" [type]="'warning'" [dismissible]="false">
+        <p *ngFor="let ticket of openSupportTickets">
             This sensor has an active trouble ticket <a routerLink="/support-tickets/{{ticket.SupportTicketID}}">#{{ticket.SupportTicketID}}: {{ticket.SupportTicketTitle}}</a> opened by {{ticket.CreatorUser.FullName}}<span *ngIf="ticket.AssigneeUser !== null"> and currently assigned to {{ticket.AssigneeUser.FullName}}</span>. Follow the <a routerLink="/support-tickets/{{ticket.SupportTicketID}}">link</a> to view more details.
         </p>
     </ngb-alert>
@@ -160,41 +160,11 @@
             <div class="card">
                 <div class="card-header">
                     Sensor Data Readings
-                    <a *ngIf="!noTimeSeriesData" class="btn btn-sm btn-zybach float-right" (click)="exportChartData()">
-                        <span class="fas fa-download"></span> Download CSV</a>  
                     <a *ngIf="!noTimeSeriesData" class="btn btn-sm btn-zybach float-right mr-2" (click)="displaySensorAnomalyPanel()">
                         <span class="fas fa-plus"></span> Add Sensor Anomaly</a>  
                 </div>
                 <div class="card-body">
-                    <div class="row" *ngIf="!timeSeries">
-                        <div class="text-center">
-                            <span class="fas fa-spinner loading-spinner"></span>
-                            <p>Loading...</p>
-                        </div>
-                    </div>
-                    <div class="row mb-1" *ngIf="!noTimeSeriesData">
-                        <div class="input-group col-xl-5 col-lg-6 col-sm-8">
-                            <span class="font-weight-bold mt-1 mx-3">Date Range:</span>
-                            <!-- input box -->
-                            <input id="dateRangeInput" class="form-control" name="mydate" placeholder="Select a date" 
-                                   angular-mydatepicker #dp="angular-mydatepicker" 
-                                   [(ngModel)]="dateRange" [options]="myDpOptions"
-                                   (dateChanged)="onDateChanged($event)"/>
-                          
-                            <!-- toggle calendar button -->
-                            <div class="input-group-append">
-                              <button type="button" class="btn btn-secondary" (click)="dp.toggleCalendar()">
-                                <i class="fa fa-calendar-o"></i>
-                              </button>
-                            </div>
-                        </div>
-                        <div class="col-sm-4">
-                            <button type="button" class="btn btn-zybach" (click)="useFullDateRange()">Use Full Date Range</button>
-                        </div>
-                    </div>
-                    <div *ngIf="!noTimeSeriesData" id="{{chartID}}" style="width: 100%; min-height: 340px;"></div>
-                    <em *ngIf="!noTimeSeriesData">All data are displayed in Central Daylight Time</em>
-                    <em *ngIf="noTimeSeriesData">No time series data available for this sensor.</em>
+                    <zybach-sensor-chart [(sensorChartData)]="sensorChartData"></zybach-sensor-chart>
                 </div>
             </div>
         </div>
