made aghubwells with wellconnectedmeter = 1 auto create a sensor of type electrical usage SensorTypeID is no longer nullable this way electrical usage WellSensorMeasurement data no longer has an alternate path and simplifies code

--- a/Zybach.Web/src/app/shared/components/well-water-data-tab/well-water-data-tab.component.html
+++ b/Zybach.Web/src/app/shared/components/well-water-data-tab/well-water-data-tab.component.html
@@ -52,7 +52,7 @@
                     <tbody>
                         <tr *ngFor="let sensor of sensorsWithStatus">
                             <td><a routerLink="/sensors/{{sensor.SensorID}}">{{sensor.SensorName}}</a></td>
-                            <td>{{sensor.SensorType}}</td>
+                            <td>{{sensor.SensorTypeName}}</td>
                             <td>{{sensor.MessageAge}}</td>
                             <td>{{sensor.IsActive ? 'Enabled' : 'Disabled'}}</td>
                         </tr>
