legend now on bottom; added some padding to bottom of charts; made well registration id clickable

--- a/Zybach.Web/src/app/shared/components/sensor-chart/sensor-chart.component.html
+++ b/Zybach.Web/src/app/shared/components/sensor-chart/sensor-chart.component.html
@@ -54,7 +54,7 @@
       </div>
     </div>
   </div>
-  <div #{{chartID}} id="{{chartID}}" style="width: 100%; min-height: 340px;"></div>
+  <div #{{chartID}} id="{{chartID}}" style="width: 100%; min-height: 340px;" class="mb-3"></div>
   <em>All data are displayed in Central Daylight Time</em>
 
 </ng-template>
