--- a/Zybach.Web/src/app/pages/water-level-explorer/water-level-explorer.component.html
+++ b/Zybach.Web/src/app/pages/water-level-explorer/water-level-explorer.component.html
@@ -28,7 +28,7 @@
                                         <field-definition [fieldDefinitionType]="'WellRegistrationNumber'">
                                         </field-definition>:
                                     </strong> </div>
-                                    <div class="col-6">{{ selectedWell?.WellRegistrationID }}</div>
+                                    <div class="col-6"><a routerLink="/wells/{{selectedWell?.WellID}}">{{selectedWell?.WellRegistrationID}}</a></div>
                                     <div class="col-6 label"><strong>Legal Description: </strong></div>
                                     <div class="col-6">{{ selectedWell?.TownshipRangeSection }}</div>
                                     <div class="col-6 label"><strong>
