Created WellPumpingSummary class, dto, and API get route. Laid out Well Pumping Summary page/grid, and added link to header nav under Water Data Program dropdown.

--- a/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -127,6 +127,9 @@
                     <a class="dropdown-item" routerLink="/dashboard">
                         Manager Dashboard
                     </a>
+                    <a class="dropdown-item" routerLink="/well-pumping-summary">
+                        Well Pumping Summary
+                    </a>
                     <a class="dropdown-item" routerLink="/irrigation-units">
                         Irrigation Units
                     </a>
