--- a/Zybach.Web/src/app/pages/well-pumping-summary/well-pumping-summary.component.html
+++ b/Zybach.Web/src/app/pages/well-pumping-summary/well-pumping-summary.component.html
@@ -7,8 +7,15 @@
     </div>
 </div>
 <ng-template #wellPumpingSummariesList>
-    <div class="container mt-2">
-        <div class="row my-3 align-items-end">
+    <div class="container mt-3">
+        <div class="row">
+            <div class="col">
+                <h2 class="d-inline-block">Well Pumping Summary</h2>
+                <custom-rich-text [customRichTextTypeID]="richTextTypeID"></custom-rich-text>
+            </div>
+        </div>
+
+        <div class="row mb-4 align-items-end">
             <div class="input-group col-sm col-12">
               <span class="font-weight-bold mt-1">Start Date:</span>
               <div class="input-group">
@@ -37,7 +44,7 @@
             <div class="col">
                 <button class="btn btn-secondary btn-md float-right mr-3" style="cursor: pointer;" (click)="downloadCsv()" placement="top"
                     ngbTooltip="Download as CSV"><i class="fas fa-download"></i></button>
-                <fresca-clear-grid-filters-button class="mr-3 float-right" [grid]="wellsGrid"></fresca-clear-grid-filters-button>
+                <fresca-clear-grid-filters-button class="mr-3 float-right" [grid]="wellPumpingSummariesGrid"></fresca-clear-grid-filters-button>
             </div>
         </div>
         <ag-grid-angular #wellPumpingSummariesGrid style="width: 100%; height: 500px;" class="ag-theme-balham" 
