--- a/Zybach.Web/src/app/pages/support-ticket-detail/support-ticket-detail.component.html
+++ b/Zybach.Web/src/app/pages/support-ticket-detail/support-ticket-detail.component.html
@@ -58,16 +58,16 @@
                                     <strong>Date Created: </strong>
                                 </div>
                                 <div class="col-xl-6 col-sm-8">
-                                    {{supportTicket.DateCreated | date:'shortDate':'UTC'}}
+                                    {{supportTicket.DateCreated | date:'short'}}
                                 </div>
                             </div>
     
                             <div class="row mt-2">
                                 <div class="col-xl-6 col-sm-4 text-sm-right">
-                                    <strong>Date Updated: </strong>
+                                    <strong>Last Updated: </strong>
                                 </div>
                                 <div class="col-xl-6 col-sm-8">
-                                    {{supportTicket.DateUpdated | date:'shortDate':'UTC'}}
+                                    {{supportTicket.DateUpdated | date:'short'}}
                                 </div>
                             </div>
     
@@ -103,20 +103,18 @@
                                 </div>
                             </div>
                         </div>
-    
-                        <div class="row mt-2 m-1">
-                            <div class="col-xl-3 col-sm-4 text-sm-right">
-                                <strong>Description: </strong>
-                            </div>
-                            <div class="col-xl-9 col-sm-8">
-                                <em *ngIf="!supportTicket.SupportTicketDescription" class="text-muted">N/A</em>
-                                {{supportTicket.SupportTicketDescription}}
-                            </div>
-                        </div>
                     </div>
+                    <div class="row mt-2">
+                        <div class="col-xl-3 col-sm-4 text-sm-right">
+                            <strong>Description: </strong>
+                        </div>
+                        <div class="col-xl-9 col-sm-8">
+                            <em *ngIf="!supportTicket.SupportTicketDescription" class="text-muted">N/A</em>
+                            {{supportTicket.SupportTicketDescription}}
+                        </div>
+                    </div>  
                 </div>
             </div>
-    
         </div>
     
         <div class="col-lg-6 mb-4">
