--- a/Zybach.Web/src/app/pages/well-pumping-summary/well-pumping-summary.component.html
+++ b/Zybach.Web/src/app/pages/well-pumping-summary/well-pumping-summary.component.html
@@ -40,11 +40,21 @@
                 <button class="btn btn-zybach" (click)="updateWellPumpingSummaries()">Update</button>
             </div>
         </div>
-        <div class="row my-2">
+        <div class="row my-2 align-items-end">
             <div class="col">
-                <button class="btn btn-secondary btn-md float-right mr-3" style="cursor: pointer;" (click)="downloadCsv()" placement="top"
+                <div class="btn-group btn-group-toggle">
+                    <label class="btn btn-toggle btn-sm btn-zybach" [class.active]="unitsShown == 'gal'">
+                      <input type="radio" name="units" id="gal" (click)="toggleUnitsShown('gal')"> Volume (gal)
+                    </label>
+                    <label class="btn btn-toggle btn-sm btn-zybach" [class.active]="unitsShown == 'in'" style="width:100px">
+                      <input type="radio" name="units" id="in" (click)="toggleUnitsShown('in')"> Depth (in)
+                    </label>
+                </div>
+            </div>
+            <div class="col-auto ml-auto">
+                <button class="btn btn-secondary btn-md" style="cursor: pointer;" (click)="downloadCsv()" placement="top"
                     ngbTooltip="Download as CSV"><i class="fas fa-download"></i></button>
-                <fresca-clear-grid-filters-button class="mr-3 float-right" [grid]="wellPumpingSummariesGrid"></fresca-clear-grid-filters-button>
+                <fresca-clear-grid-filters-button [grid]="wellPumpingSummariesGrid"></fresca-clear-grid-filters-button>
             </div>
         </div>
         <ag-grid-angular #wellPumpingSummariesGrid style="width: 100%; height: 500px;" class="ag-theme-balham" 
