PumpingRateGallonsPerMinute and PumpingRateSource fields added to WellDetailDto, populated from AgHubWell table (copying the logic from the AgHubWell class's read-only PumpingRateGallonsPerMinute field). Both values exposed on Well Detail page.

--- a/Zybach.Web/src/app/shared/components/well-overview-tab/well-overview-tab.component.html
+++ b/Zybach.Web/src/app/shared/components/well-overview-tab/well-overview-tab.component.html
@@ -74,6 +74,14 @@
                                         <em>Irrigated Acres are not available for this parcel</em>
                                     </ng-template>
                                 </div>
+                                <div class="col-12 col-sm-6 label">
+                                    <strong>Pump Rate:</strong>
+                                </div>
+                                <div class="col-12 col-sm-6">{{well.PumpingRateGallonsPerMinute}} GPM</div>
+                                <div class="col-12 col-sm-6 label">
+                                    <strong>Pump Rate Source:</strong>
+                                </div>
+                                <div class="col-12 col-sm-6">{{well.PumpingRateSource ?? 'None'}}</div>
                             </div>
                         </div>
                     </div>
