--- a/Zybach.Web/src/app/pages/irrigation-unit-list/irrigation-unit-list.component.html
+++ b/Zybach.Web/src/app/pages/irrigation-unit-list/irrigation-unit-list.component.html
@@ -17,9 +17,8 @@
                 </div>
             </div>
             <div class="table-responsive">
-                <ag-grid-angular #irrigationUnitGrid style="width: 100%; height: 500px;" 
-                    class="ag-theme-balham"
-                    [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" (firstDataRendered)="onFirstDataRendered($event)"
+                <ag-grid-angular #irrigationUnitGrid style="width: 100%; height: 500px;" class="ag-theme-balham"
+                    [columnDefs]="columnDefs" [defaultColDef]="defaultColDef" [rowData]="irrigationUnits" (firstDataRendered)="onFirstDataRendered($event)"
                     [pagination]="true" [paginationPageSize]="100" [suppressMenuHide]="true">
                 </ag-grid-angular>
             </div>
