Actually populating SnoozeStartDate from GetSensorMessageAges endpoint to ensure sensor status is only displaying non-snoozed records. Minor 267 rework: - Rename Irrigation Units page to Irrigation Unit Summary (page header and nav bar) - Setting default StartYear to current year rather than first water year

--- a/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
+++ b/Zybach.Web/src/app/shared/components/header-nav/header-nav.component.html
@@ -131,7 +131,7 @@
                         Well Pumping Summary
                     </a>
                     <a class="dropdown-item" routerLink="/irrigation-units">
-                        Irrigation Units
+                        Irrigation Unit Summary
                     </a>
                     <div class="dropdown-divider"></div>
                     <a class="dropdown-item" routerLink="/sensors">
